# hsa-hw-13-queues-comparison

./: .gitignore  Dockerfile  README.md  consumer.py  docker-compose-beanstalkd.yml  docker-compose-redis-aof.yml  docker-compose-redis-rdb.yml  docker-compose.yml  producer.py  pyproject.toml
