[tool.poetry]
name = "hsa-hw-13-queues-comparison"
version = "0.1.0"
description = "Redis vs Beanstalkd queues comparison."
readme = "README.md"
authors = ["Oleksandr Baltian <obaltian@icloud.com>"]
license = "MIT"


[tool.poetry.dependencies]
python = "^3.11"
pystalk = "0.7.0"
redis = { version = "4.6.0", extras = ["hiredis"] }
rq = "1.15.1"
tqdm = "4.66.1"


[tool.poetry.group.dev.dependencies]
darker = "1.7.1"
black = "23.3.0"
isort = "5.12.0"
mypy = "1.5.0"
types-tqdm = "4.66.0.1"
types-redis = "4.6.0.3"


[tool.isort]
profile = "black"


[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = ["pystalk.*"]
ignore_missing_imports = true


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
